--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -6,5 +6,4 @@
     android:pivotY="50%"
     android:repeatCount="1"
     android:toDegrees="5"
-    android:repeatMode="reverse"
-    />
+    android:repeatMode="reverse" />
