--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray"
-        android:elevation="12.5dp"
         tools:context=".MainActivity">
 
         <Button
             android:id="@+id/button_true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/teal_700"
-            android:fontFamily="@font/google_sans"
-            android:text="True"
-            android:textColor="@color/gray"
+            android:text="@string/string_true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_false"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            style="@style/button_style" />
 
         <Button
             android:id="@+id/button_false"
-            android:textColor="@color/gray"
-            android:backgroundTint="@color/teal_700"
-            android:fontFamily="@font/google_sans"
-            android:text="False"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:text="@string/string_false"
+            style="@style/button_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_true"
@@ -43,25 +34,19 @@
 
         <TextView
             android:id="@+id/q_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poiret_one"
-            android:text=""
-            android:textColor="@color/white"
             android:textSize="30sp"
+            android:text=""
             app:layout_constraintBottom_toTopOf="@+id/cardView"
             app:layout_constraintEnd_toStartOf="@+id/q_total"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            style="@style/text_style" />
 
         <TextView
             android:id="@+id/q_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poiret_one"
+            style="@style/text_style"
             android:text=""
-            android:textColor="@color/white"
             android:textSize="17.5sp"
             app:layout_constraintBottom_toBottomOf="@+id/q_num"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +72,7 @@
                 android:id="@+id/q_statement"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:text=""
                 android:fontFamily="@font/google_sans"
                 android:padding="10dp"
                 android:textColor="@color/gray"
@@ -95,12 +81,9 @@
 
         <TextView
             android:id="@+id/textScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:fontFamily="@font/poiret_one"
-            android:text="Score : "
-            android:textColor="@color/white"
+            style="@style/text_style"
+            android:text="@string/string_score"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/q_num"
             app:layout_constraintEnd_toEndOf="parent"
